[metadata]
name = fillup
version = 0.1.0
description = A simple CLI tool to fill forms automatically with image input
author = anand pasupuleti
license = MIT

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    Pillow
    pytesseract
    selenium
    pandas

[options.entry_points]
console_scripts =
    fillup = fillup.cli:main
